# cs6991-bmp

./: Cargo.toml  README.md
examples/: gradient.rs
src/: decoder.rs  encoder.rs  lib.rs
