[package]

name = "cs6991-bmp"
version = "0.1.0"
authors = ["COMP6991 UNSW"]
edition = "2024"

description = "Small library for reading and writing BMP images in Rust."
# documentation = "https://docs.rs/cs6991-bmp"
repository = "https://github.com/COMP6991UNSW/cs6991-bmp.git"
homepage = "https://github.com/COMP6991UNSW/cs6991-bmp"

license = "MIT"
readme = "README.md"

keywords = ["bmp", "image"]

exclude = ["test/*"]

[dependencies]
byteorder = "^1.0.0"
